test(benchmarks): assert what the seam costs instead of assuming it is free
The plan demanded DELTA B = 0 from the footprint test, and that demand was
wrong when it was written. An indirection is an object: a chunk that holds
its storage instead of being it weighs one object more, and zero was never
reachable while the storage is a separate type - which is the entire point
of the stage.

Measured: 192 -> 193 objects, 6848 -> 6872 bytes, in all sixteen rows and
independent of chunk size, because the seam is one object rather than a
per-section cost.

So the assertion is tightened rather than relaxed. It compares per class
over the union of what either side retains and demands equality everywhere
except SectionBlockStorage, of which Falco holds exactly one and Minestom
none, plus that the whole byte difference is the size of that object. A
tolerance would have let the next silently added field through, which is
what this test exists to prevent.

Three injected defects confirm it still bites: a spare Object is caught by
the per-class comparison, a second BlockStorage by the count, and a
primitive long field - which adds no object at all and fit into the padding
of the chunk - only by the byte comparison of the chunk post. That third
case is why the assertion is not merely a count.

Co-Authored-By: Claude Opus 5 (1M context) <noreply@anthropic.com>